[FIX] - prevent logo distortion in sidebar when is expanded

--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -81,10 +81,11 @@
   }
   
   .logoSidebarUser {
-    width: 100%;
+    max-width: 200px;  
+    height: auto;  
     margin: 0 auto;
     display: block;
-    max-height: 40px;
+    object-fit: contain;
   }
   
   .logo {
